--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "which-country": "^1.0.0"
   }
 }
